--- a/src/style.css
+++ b/src/style.css
@@ -83,9 +83,7 @@ body {
     background-color: #222;
     border-radius: 1rem;
     padding: 2.5rem 2rem;
-
     overflow-y: auto;
-    scrollbar-width: thin;
 
     display: grid;
     grid-template-columns: 1fr 3fr 3fr;
@@ -95,6 +93,15 @@ body {
     justify-items: center;
     align-content: start;
     gap: 0.25rem;
+}
+
+.moves::-webkit-scrollbar {
+    width: 0.8rem;
+}
+
+.moves::-webkit-scrollbar-thumb {
+    background: whitesmoke;
+    border-radius: 1rem;
 }
 
 .move {
