Add border to active playMode button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,6 +66,9 @@ body {
     font-weight: 600;
 }
 
+.playmode button.active {
+    border: 1px solid whitesmoke;
+}
 
 .header {
     grid-area: header;
