--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,5 +1,6 @@
 /* Reset CSS styles */
 html, body, div, span, applet, object, iframe,
+button, input, select, textarea, optgroup, option,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
