--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,10 @@
 body {
     --website-background-color: #111;
     --text-color: whitesmoke;
-    --box-color: #222;
+    --box-color-rgb: 34, 34, 34;
+    --box-color: rgb(var(--box-color-rgb));
+
+    --border-radius: 1rem;
 
     background-color: var(--website-background-color);
     color: var(--text-color);
@@ -15,6 +18,23 @@ body {
         height: 100vh;
         padding: 2rem;
     }
+}
+
+button {
+    color: inherit;
+    background-color: var(--box-color);
+    cursor: pointer;
+    border-radius: var(--border-radius);
+}
+
+button:hover:not(:disabled) {
+    background-color: #444;
+    outline: 1px solid #888;
+}
+
+button:disabled {
+    color: rgb(119, 119, 119);
+    cursor: unset;
 }
 
 .chess {
@@ -43,7 +63,7 @@ body {
 .board {
     width: 100%;
     aspect-ratio: 1;
-    border-radius: 1rem;
+    border-radius: var(--border-radius);
 }
 
 .moves_panel {
@@ -98,16 +118,64 @@ body {
     gap: 1rem;
 }
 
-.playmode button {
+.playmode_selector {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    background-color: var(--box-color);
-    border: 1px solid var(--box-color);
     padding: 0.8rem 0.3rem;
-    border-radius: 1.4rem;
-    color: var(--text-color);
+    border-radius: var(--border-radius);
     font-size: 1.2rem;
     font-weight: 600;
+}
+
+.playmode_player_vs_bot {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--box-color);
+    border-radius: var(--border-radius);
+    padding: 0 1rem;
+    transition: 0.3s padding ease, 0.3s background-color ease;
+}
+
+.playmode_player_vs_bot:hover {
+    background-color: rgba(var(--box-color-rgb), 0.3);
+    padding: 1rem;
+}
+
+.playmode_player_vs_bot_color {
+    display: flex;
+    justify-content: space-between;
+    transition: 0.3s margin ease;
+}
+
+.playmode_player_vs_bot:hover .playmode_player_vs_bot_color {
+    margin-top: 1rem;
+}
+
+.playing_color_selector {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    padding: 0 0.75rem;
+    transition: 0.3s padding ease;
+    overflow: hidden;
+}
+
+.playmode_player_vs_bot:hover .playing_color_selector {
+    padding: 0.5rem 0.75rem;
+}
+
+.playing_color_selector_icon {
+    width: 1.8rem;
+    height: 0;
+    transition: 0.3s height ease;
+}
+
+.playmode_player_vs_bot:hover .playing_color_selector_icon {
+    height: 1.8rem;
+}
+
+.playing_color_selector span {
+    line-height: 0;
 }
 
 .playmode_arrow {
@@ -127,7 +195,7 @@ body {
 .next_player,
 .evaluation {
     background-color: var(--box-color);
-    border-radius: 1rem;
+    border-radius: 0.75rem;
     padding: 0.5rem 1rem;
 }
 
@@ -151,7 +219,7 @@ body {
 .square {
     width: 1.5rem;
     height: 1.5rem;
-    border-radius: 0.75rem;
+    border-radius: 0.5rem;
 }
 .white_to_move .square {
     background-color: whitesmoke;
@@ -165,7 +233,7 @@ body {
     overflow-y: hidden;
     flex-grow: 1;
     background-color: var(--box-color);
-    border-radius: 1rem;
+    border-radius: var(--border-radius);
     padding: 0.5rem;
 }
 
@@ -174,9 +242,6 @@ body {
     position: absolute;
     padding: 0.5rem;
     bottom: 0;
-
-    background: none;
-    border: none;
     cursor: pointer;
 }
 
@@ -248,28 +313,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
     user-select: none;
-
-    background-color: var(--box-color);
-    border: 1px solid var(--box-color);
     padding: 0.4rem 0;
-    border-radius: 1.5rem;
-
-    color: var(--text-color);
+    border-radius: var(--border-radius);
     font-size: 2.5rem;
-}
-
-.actions button:disabled {
-    color: rgb(119, 119, 119);
-}
-
-.actions button:hover:not(:disabled),
-.playmode button:hover {
-    background-color: #444;
-    border: 1px solid #888;
-
-    cursor: pointer;
 }
 
 .reset_icon {
