--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,12 +69,13 @@ button:disabled {
 .moves_panel {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 
     @media (min-width: 50rem) {
         height: 100%;
         width: 25rem;
         order: 3;
+        gap: 1rem;
     }
 }
 
@@ -82,7 +83,7 @@ button:disabled {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 1rem;
+    gap: 1.5rem;
 
     @media (min-width: 50rem) {
         width: 18rem;
@@ -115,7 +116,16 @@ button:disabled {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    gap: 1rem;
+    gap: 0.5rem;
+
+    padding-top: calc(1.5rem - 2px);
+    box-shadow: 0 -2px 0 var(--box-color);
+
+    @media (min-width: 50rem) {
+        gap: 1rem;
+        padding: 0;
+        box-shadow: none;
+    }
 }
 
 .playmode_selector {
@@ -241,7 +251,8 @@ button:disabled {
     display: flex;
     position: absolute;
     padding: 0.5rem;
-    bottom: 0;
+    bottom: 0.2rem;
+    left: 0.2rem;
     cursor: pointer;
 }
 
@@ -305,8 +316,12 @@ button:disabled {
 .actions {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    gap: 0.5rem;
     font-size: 3rem;
+
+    @media (min-width: 50rem) {
+        gap: 1rem;
+    }
 }
 
 .actions button {
