Minor margin fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,6 +104,9 @@ button:disabled {
 
 .improvements ul {
     font-style: italic;
+}
+
+.improvements ul:not(:last-child) {
     margin-bottom: 1rem;
 }
 
