--- a/src/css/style.css
+++ b/src/css/style.css
@@ -281,7 +281,7 @@ button:disabled {
     cursor: pointer;
 }
 
-.copy_moves_image {
+.copy_moves_icon {
     height: 1.2rem;
     width: 1.2rem;
 }
