--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,8 @@ body {
     --text-color: whitesmoke;
     --box-color-rgb: 34, 34, 34;
     --box-color: rgb(var(--box-color-rgb));
+    --box-hover-color: #444;
+    --box-hover-border-color: #888;
 
     --border-radius: 1rem;
 
@@ -20,16 +22,15 @@ body {
     }
 }
 
-button {
-    color: inherit;
+.generic_button {
     background-color: var(--box-color);
     cursor: pointer;
     border-radius: var(--border-radius);
 }
 
-button:hover:not(:disabled) {
-    background-color: #444;
-    outline: 1px solid #888;
+.generic_button:hover:not(:disabled) {
+    background-color: var(--box-hover-color);
+    outline: 1px solid var(--box-hover-border-color);
 }
 
 button:disabled {
@@ -234,21 +235,15 @@ button:disabled {
     padding: 0.5rem 1rem;
 }
 
-.white_to_move,
-.black_to_move,
-.end_of_game {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-}
-
-.end_of_game {
-    gap: 0;
-}
-
+.next_player > div,
 .evaluation {
     display: flex;
     align-items: center;
+    gap: 0.5rem;
+}
+
+.next_player .end_of_game {
+    gap: 0;
 }
 
 .square {
@@ -261,6 +256,46 @@ button:disabled {
 }
 .black_to_move .square {
     background-color: black;
+}
+
+.toggle_button {
+    position: relative;
+    width: 2.5rem;
+    height: 1.3rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 1px var(--text-color);
+    border-radius: var(--border-radius);
+    transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.toggle_button::after {
+    position: absolute;
+    content: '';
+    width: 0.9rem;
+    height: 0.9rem;
+    border-radius: 50%;
+    background-color: var(--text-color);
+    transition: left 0.3s, background-color 0.3s;
+    left: 0.2rem;
+}
+
+.toggle_button.active {
+    background-color: #27a4dd;
+    box-shadow: none;
+}
+
+.toggle_button.active::after {
+    left: calc(100% - 0.2rem - 0.9rem);
+}
+
+.toggle_button:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.toggle_button.active:hover {
+    background-color: #1e95cb;
 }
 
 .moves_container {
